--- a/Client/mlb-statistics/src/App.css
+++ b/Client/mlb-statistics/src/App.css
@@ -16,3 +16,13 @@
 .App-link {
   color: #61dafb;
 }
+
+.PlayerLetterButton{
+  width: 50px;
+  height: 50px;
+}
+
+.PlayerNameButton{
+  width: 200px;
+  height: 40px;
+}
